--- a/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
+++ b/Source/Qactive.Providers.Tcp/Qactive.Providers.Tcp.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\Build\NuGet.props" />
   <Import Project="..\..\packages\WhiteTie.1.3.14\build\WhiteTie.props" Condition="Exists('..\..\packages\WhiteTie.1.3.14\build\WhiteTie.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -68,10 +69,13 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TcpQactiveDefaults.cs" />
     <Compile Include="TcpQactiveProviderFactory.cs" />
+    <Compile Include="TcpQactiveProviderFactory{TTransportInitializer}.cs" />
+    <Compile Include="ITcpQactiveProviderTransportInitializer.cs" />
     <Compile Include="TcpQbservable.cs" />
     <Compile Include="TcpQbservableClient.cs" />
     <Compile Include="TcpQactiveProvider.cs" />
